<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dip"
    android:paddingRight="16dip">

    <TextView
        style="@style/TextViewSupertitle"
        android:id="@+id/courseCodeTextView"
        android:text="@string/courseCodePlaceholder" />

    <TextView
        android:id="@+id/courseNameTextView"
        style="@style/TextViewOtherTitle"
        android:text="@string/courseNamePlaceholder" />

    <TextView
        style="@style/TextViewSubtitle"
        android:text="@string/description" />

    <TextView
        android:id="@+id/courseDescriptionTextView"
        style="@style/TextViewBoxText"
        android:text="@string/courseDescriptionPlaceholder"/>

    <TextView
        android:text="@string/prerequisites"
        style="@style/TextViewSubtitle" />

    <TextView
        android:id="@+id/prerequisitesTextView"
        style="@style/TextViewBoxText"
        android:text="@string/prerequisites"/>

    <TextView
        android:text="@string/corequisites"
        style="@style/TextViewSubtitle" />

    <TextView
        android:id="@+id/corequisitesTextView"
        android:text="@string/corequisites"
        style="@style/TextViewBoxText" />

    <TextView
        style="@style/TextViewSubtitle"
        android:text="@string/drbr"/>

    <TextView
        android:id="@+id/drbrTextView"
        android:text="@string/drbr"
        style="@style/TextViewBoxText" />

    <TextView
        style="@style/TextViewSubtitle"
        android:text="@string/exclusions"/>

    <TextView
        android:id="@+id/exclusionsTextView"
        android:text="@string/exclusions"
        style="@style/TextViewBoxText" />
</LinearLayout>